--- a/style.css
+++ b/style.css
@@ -1,67 +1,70 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&family=Roboto:wght@100;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&family=Roboto:wght@100;400;700&display=swap");
 
 p {
-    font-size: 20px;
+  font-size: 0.9375rem;
 }
 
 h1,
 p {
-    margin: 1.8rem;
-    padding: 0;
+  margin: 1.8rem;
+  padding: 0;
 }
 
 body {
-    background-color: #d6e2f0;
-    min-height: 100vh;
-    display: grid;
-    margin: 0px;
-    place-items: center;
+  background-color: #d6e2f0;
+  min-height: 100vh;
+  display: grid;
+  margin: 0px;
+  place-items: center;
+  width: auto 1440px;
+  margin-bottom: 0;
 }
 
 .container {
-    place-self: center;
-    background-color: #fff;
-    display: grid;
-    place-items: center;
-    gap: .1rem;
-    border-radius: 1.5rem;
-    max-block-size: 50rem;
-    grid-row: auto;
-    position: absolute;
+  background-color: #fff;
+  display: grid;
+  place-items: center;
+  gap: 0.01rem;
+  border-radius: 1.5rem;
 }
 
 .container img {
-    max-width: 380px;
-    display: block;
-    margin-top: 1rem;
-    border-radius: 1rem;
+  max-width: 240px;
+  display: block;
+  margin-top: 0.7rem;
+  border-radius: 1rem;
 }
 
 .container h1 {
-    font-family: "Outfit";
-    max-width: 17ch;
-    text-align: center;
-    font-weight: 700;
-    color: #1f3251;
-    margin-bottom: 0.6rem;
+  font-family: "Outfit";
+  max-width: 17ch;
+  text-align: center;
+  font-weight: 700;
+  color: #1f3251;
+  font-size: 1.3rem;
+  margin: 0.6rem 1rem;
 }
 
 .container p {
-    font-family: "Outfit";
-    max-width: 25ch;
-    text-align: center;
-    font-weight: 400;
-    margin: 0;
-    margin-bottom: 3rem;
-    color: #7b879d;
-    padding-top: 2px;
+  font-family: "Outfit";
+  max-width: 25ch;
+  text-align: center;
+  font-weight: 400;
+  margin: 0;
+  margin-bottom: 2rem;
+  color: #7b879d;
+  padding-top: 2px;
 }
 
 .attribution {
-    display: block;
-    position: relative;
-    top: 27rem;
-    font-family: "Outfit";
+  display: block;
+  top: 47rem;
+  font-family: "Outfit";
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  font-size: 0.9375rem;
 }
 
-
+@media screen and (max-width: 375px) {
+}
